--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,7 +105,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #ffffff;
+		background: blue;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -158,7 +158,7 @@ input, select, textarea {
 		}
 
 	body {
-		background-color: #ffffff;
+		background-color:rgb(233, 230, 230);
 		color: #000000;
 	}
 
